--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "5.7.4",
+    "@capacitor/app": "5.0.7",
+    "@capacitor/core": "5.7.4",
+    "@capacitor/haptics": "5.0.7",
+    "@capacitor/keyboard": "5.0.8",
+    "@capacitor/status-bar": "5.0.7",
+    "@ionic/react": "^7.8.3",
     "@react-three/fiber": "^8.16.1",
     "@theatre/core": "0.5",
     "@theatre/r3f": "~0.5.1",
@@ -19,6 +26,7 @@
     "three": "^0.163.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "5.7.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/three": "^0.163.0",
