--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/react": "^7.8.3",
     "@react-three/fiber": "^8.16.1",
-    "@theatre/core": "0.5",
-    "@theatre/r3f": "~0.5.1",
-    "@theatre/studio": "0.5",
+    "@theatre/core": "~0.7.0",
+    "@theatre/r3f": "~0.7.0",
+    "@theatre/studio": "~0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.163.0"
